--- a/project.yml
+++ b/project.yml
@@ -10,6 +10,10 @@ targets:
       - path: .
         excludes:
           - project.yml
+    resources:
+      - path: FER_Model_FP32.mlpackage
+      - path: FER_MobileNetV2.mlpackage
+      - path: FER_MobileNetV2_FP32.mlpackage
     settings:
       base:
         GENERATE_INFOPLIST_FILE: YES
@@ -17,6 +21,15 @@ targets:
         INFOPLIST_KEY_CFBundleDisplayName: "Facial Expression"
         INFOPLIST_KEY_UILaunchScreen_Generation: true
         INFOPLIST_KEY_NSCameraUsageDescription: "This app requires camera access to detect facial expressions."
+        INFOPLIST_KEY_UISupportedInterfaceOrientations:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
+        INFOPLIST_KEY_UISupportedInterfaceOrientations~ipad:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationPortraitUpsideDown
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
         CURRENT_PROJECT_VERSION: 1
         MARKETING_VERSION: 1.0
         DEVELOPMENT_TEAM: "" # User needs to set this
